--- a/templates/admin.html
+++ b/templates/admin.html
@@ -403,7 +403,7 @@
                     <button type="submit" style="background:#6c7ae0;"><i class="fa fa-image"></i> 生成长图</button>
                 </div>
             </form>
-            <p class="tips">使用当前数据库中的歌曲名（按现有排序规则）。默认保存到 <code>/static/uploads</code>，结果会在上方提示。</p>
+            <p class="tips">使用当前数据库中的歌曲名（按现有排序规则）。提交后会直接下载生成的长图，同时也会保存到 <code>/static/uploads</code>。</p>
         </div>
 
         <div class="panel">
